# DoneDeal

./: .gitignore  README.md  __init__.py  pyproject.toml  requirement.txt  setup.py
DoneDeal/: __init__.py
DoneDeal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
DoneDeal/donedeal/: constants.py  utils.py
DoneDeal/tests/: example.json  test.ipynb
curve_fitting/: donedeal_2024-08-02_09-24-02.pkl  process.ipynb  processed.pkl  scrape.ipynb
donedeal/: __init__.py  __main__.py  constants.py  core.py  data_cleaning.py
media/: Thumbs.db  plot.html
tests/: Mercedes.py  cli_mercedes.py  temp-plot.html  test.ipynb
