[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "donedeal"
dynamic = ["version"]
description = "A simple scraper and utilities for DoneDeal car listings"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["donedeal", "scraping", "cars", "ireland", "classifieds"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "flake8>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.scripts]
donedeal = "donedeal.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "donedeal.__version__"}

[tool.setuptools.packages.find]
include = ["donedeal*"]
exclude = ["tests*", "media*", "curve_fitting*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]

[tool.coverage.run]
source = ["donedeal", "tests"]
omit = ["donedeal/__main__.py"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == '__main__':",
]
